syntax = "proto3";

package tycho.evm.v1;

import "tycho/evm/v1/common.proto";

// A key value entry into contract storage.
message ContractSlot {
  // A contracts storage slot.
  bytes slot = 2;
  // The new value for this storage slot.
  bytes value = 3;
}

// Changes made to a single contracts state.
message ContractChange {
  // the contracts address
  bytes address = 1;
  // The new balance of the contract, empty bytes indicates no change.
  bytes balance = 2;
  // The new code of the contract, empty bytes indicates no change
  bytes code = 3;
  // The changes to this contracts slots, empty sequence indicates no change.
  repeated ContractSlot slots = 4;
  // Whether this is an update, a creation or a deletion.
  ChangeType change = 5;
}

message TransactionContractChanges {
  Transaction tx = 1;
  // Contains the changes induced by the above transaction,
  // aggregated on a per-contract basis
  repeated ContractChange contract_changes = 2;
  repeated ProtocolComponent component_changes = 3;
  repeated BalanceChange balance_changes = 4;
}

// A set of transaction changes within a single block.
message BlockContractChanges {
  // The block for which these changes are collectively computed.
  Block block = 1;
  repeated TransactionContractChanges changes = 2;
}
